--- a/assignments/1. hello-world/internal/index.html
+++ b/assignments/1. hello-world/internal/index.html
@@ -7,4 +7,8 @@
     <title>Internal</title>
   </head>
   <body></body>
+  <script>
+    var name = prompt("Enter Your Name"); //Prompt for name(stored in variable name)
+	alert ("Good Morning " + name); 
+  </script>
 </html>
