--- a/assignments/1. hello-world/internal/index.html
+++ b/assignments/1. hello-world/internal/index.html
@@ -6,5 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Internal</title>
   </head>
-  <body></body>
+  <body>
+      <script>
+      var txt;
+      var person = prompt("Enter your name:","Your name");
+        txt = "Good morning " +person;
+        alert(txt);
+    </script>
+  </body>
 </html>
